# DiveBridge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/skills/har-extract/: SKILL.md  har_extract.py
crates/app/: CONTRACT.md  Cargo.toml
crates/app/src/: main.rs
crates/core/: CONTRACT.md  Cargo.toml
crates/core/src/: hash.rs  lib.rs  model.rs  rules.rs  tracking.rs  units.rs
crates/enrich/: CONTRACT.md  Cargo.toml
crates/enrich/src/: lib.rs
crates/ingest-ble/: CONTRACT.md  Cargo.toml
crates/ingest-ble/src/: lib.rs
crates/ingest-file/: CONTRACT.md  Cargo.toml
crates/ingest-file/src/: lib.rs  uddf.rs
crates/ingest-file/tests/: uddf_parsing.rs
crates/ingest-file/tests/fixtures/: README.md  go-uddf-valid.uddf  perdix2-real.uddf
crates/ssi-api/: CONTRACT.md  Cargo.toml
crates/ssi-api/src/: client.rs  lib.rs  mapping.rs
crates/ssi-api/tests/: mapping.rs
crates/ssi-api/tests/fixtures/: create-dive.request.txt
crates/ssi-browser/: CONTRACT.md  Cargo.toml
crates/ssi-browser/src/: lib.rs
crates/store/: CONTRACT.md  Cargo.toml
crates/store/src/: lib.rs
crates/store/tests/: store.rs
docs/: README.md  api-capture.md  decisions-log.md  parallelization-playbook.md  ssi-integration.md  ssi-vocabularies.md  uddf-shearwater-dialect.md
