# DiveBridge — Cargo workspace
# (OS folder is still `ssi-uploader`; project/crates are `divebridge`. Folder
# rename is a deliberate later step — see plan.)
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Ken A. <kenthejr@gmail.com>"]
rust-version = "1.90"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
anyhow = "1"

# Local crates
divebridge-core = { path = "crates/core" }
