# DiveBridge — Cargo workspace
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Ken A. <kenthejr@gmail.com>"]
rust-version = "1.90"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Local crates
divebridge-core = { path = "crates/core" }
divebridge-ingest-file = { path = "crates/ingest-file" }
divebridge-ssi-api = { path = "crates/ssi-api" }
