[package]
name = "divebridge-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "DiveBridge application shell (Tauri v2 — wiring added later)."

[[bin]]
name = "divebridge"
path = "src/main.rs"

[dependencies]
divebridge-core.workspace = true
