[package]
name = "divebridge-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "DiveBridge application shell + MVP CLI (Tauri wiring added later)."

[[bin]]
name = "divebridge"
path = "src/main.rs"

[dependencies]
divebridge-core.workspace = true
divebridge-ingest-file.workspace = true
divebridge-ssi-api.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
