[package]
name = "divebridge-enrich"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Deterministic dive enrichment via data feeds; optional fail-safe AI provider."

[dependencies]
divebridge-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# reqwest (json) for Open-Meteo / NOAA when implemented
