[package]
name = "divebridge-ingest-ble"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Adapt the shearwater-ble crate output into core::Dive."

[dependencies]
divebridge-core.workspace = true
thiserror.workspace = true
# shearwater-ble = { git = "..." }   # separate public repo, added in Spike 2
