[package]
name = "divebridge-ingest-file"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Parse UDDF/XML/CSV dive exports into core::Dive."

[dependencies]
divebridge-core.workspace = true
thiserror.workspace = true
chrono.workspace = true
quick-xml = { version = "0.37", features = ["serialize"] }
