[package]
name = "divebridge-ssi-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Direct HTTP client for divessi.com (auth, read, create dive)."

[dependencies]
divebridge-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# reqwest = { version = "0.12", features = ["json", "cookies"] }  # added when wiring
# reqwest_cookie_store, cookie_store                              # session persistence
