[package]
name = "divebridge-ssi-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Direct HTTP client for divessi.com (auth, read, create dive)."

[dependencies]
divebridge-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
reqwest = { version = "0.12", features = ["json", "cookies"] }
form_urlencoded = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
