[package]
name = "divebridge-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Flat-file persistence for DiveBridge (UDDF/JSON, content-hash dedup)."

[dependencies]
divebridge-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
